# ai-shared-hig

./: .dockerbuildignore-note.txt  .dockerignore  .gitignore  Dockerfile  FIXES.md  FORMAL_RIGOR_REPORT.md  IMPROVEMENTS_APPLIED.md  METAINFO.md  README.md  XML_IMPROVEMENTS_SUMMARY.md  api.py  assess_data_quality.py  assess_dependencies.py  assess_formal_rigor.py  assess_xml_quality.py  autonomous_ai_extracted.txt  corpus_converter.py  corpus_manager.py  csv_quality_assessment.md  csv_to_xml.py  database.py  docker-compose.yml  docker-entrypoint.sh  fix_formal_definition_formatting.py  fix_formal_definition_formatting_v2.py  fix_formal_definitions_content.py  fix_markdown_corruption.py  fix_operation_names_final.py  full.csv  full_updated.csv  hci-spec-quality-report.md  hci_csv_assessment.md  improve_content_quality.py  init_db.py  load_patterns.py  models.py  nginx.conf  partial.jsonl  patch.sh  patch_P01_P10.sh  (+23 more)
data/master_data/: final_corpus.jsonl  final_corpus_compact.csv  final_corpus_compact.jsonl  final_corpus_simple.csv
docs/: API_EXPORT_FORMATS.md  CSV_FORMAT_GUIDE.md
master_data/: C1_Graph_Structure.xml  C2_Document-Artifact.xml  C2_Document_Artifact.xml  C3_Symbolic_Expression.xml  C4_Metadata_Schema.xml  C5_Version_History.xml  F1.1_1_Capture_Flow.xml  F1.2_2_Import_Flow.xml  F1.3_3_Live_Stream_Flow.xml  F2.1_1_Pipeline_Flow.xml  F2.2_2_Agent_Orchestration_Flow.xml  F2.3_3_Incremental_Computation_Flow.xml  F2.4_4_Enrichment_Flow.xml  F3.1_1_Learning_Loop.xml  F3.2_2_Validation_Loop.xml  F3.3_3_Adaptation_Loop.xml  F3.4_4_User_Preference_Loop.xml  F4.1_1_Reactive_Render_Flow.xml  F4.2_2_Notification_Flow.xml  F4.3_3_Export-Publish_Flow.xml  F4.4_4_Materialized_View_Flow.xml  F5_Collaborative_Editing_Flow.xml  F6_Error_Recovery_Flow.xml  P100_Source_Citation.xml  P101_Retrieval_Path_Visualization.xml  P102_Confidence-Based_Highlighting.xml  P103_Multi-Source_Reconciliation.xml  P104_Graph_Query_Builder.xml  P105_Semantic_Similarity_Visualizer.xml  P106_Auto-Updating_Content.xml  P107_Suggested_Edits.xml  P108_Cross-Document_Linking.xml  P109_Outdated_Content_Detection.xml  P10_Parser-Compiler_Pipeline.xml  P10_Parser_Compiler_Pipeline.xml  P110_Collaborative_Document_Intelligence.xml  P111_Document_Evolution_Timeline.xml  P112_Event_Stream_Visualization.xml  P113_Event_Replay_Control.xml  P114_Stream_Backpressure.xml  (+149 more)
output/: README.md  data.json  export_updated.csv  hci-spec-improved.jsonl  hci-spec.jsonl  master_data_final.csv  patterns.jsonl  universal_corpus_complete.xml  universal_corpus_complete.yaml
output/csv/: components.csv  dependencies.csv  operations.csv  patterns_summary.csv  properties.csv
scripts/: format.sh  lint.sh  repair_mojibake.py  run_dev_server.sh  run_p5_self_check.py  run_tests.sh  split_jsonl_patterns.py
tests/: __init__.py  conftest.py  test_api.py  test_p5_applicability.py
tmp/: F1.1_1_Capture_Flow.md  F1.2_2_Import_Flow.md  F1.3_3_Live_Stream_Flow.md  F2.1_1_Pipeline_Flow.md  F2.2_2_Agent_Orchestration_Flow.md  F2.3_3_Incremental_Computation_Flow.md  F2.4_4_Enrichment_Flow.md  F3.1_1_Learning_Loop.md  F3.2_2_Validation_Loop.md  F3.3_3_Adaptation_Loop.md  F3.4_4_User_Preference_Loop.md  F4.1_1_Reactive_Render_Flow.md  F4.2_2_Notification_Flow.md  F4.3_3_Export-Publish_Flow.md  F4.4_4_Materialized_View_Flow.md  F6_Error_Recovery_Flow.md  M2M_SPECIFICATION.md  P36_Selection-Driven_Panel.md  P61_Unit_Test_Pattern.md  P62_Integration_Test_Pattern.md  P63_End-to-End_Test_Pattern.md  P64_Generative_UI_Pattern.md  P65_Streaming_Component_Pattern.md  P66_Context-Adaptive_Interface_Pattern.md  P67_Progressive_Disclosure_by_AI_Pattern.md
ui-example/: ai-native-workspace-complete-vision.md  ai-native-workspace-summary.md  ai-native-workspace-ui-mockup.html  ai-native-workspace-visualization.html  cms-editor-architecture-visualization.html  cms-editor-pattern-visualization.html  cms-editor-quick-reference.md  cms-editor-technical-architecture.md  cms-editor-ux-ui-specification.md  hci-corpus.json  patterns_v1.js  universal-app-anatomy-with-corpus.html  v1-complete-fundamental-patterns.html  v2-advanced-pattern-system.html
(+376 files in other folders)
